--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -115,7 +115,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kazakh: {{t+|kk|әдемі|sc=Cyrl}}, {{t|kk|әсем|sc=Cyrl}}
 * Khanty: {{t|kca|хурамӑӈ}} {{qualifier|Kazym}}
 * Khmer: {{t+|km|ស្អាត}}, {{t+|km|ល្អ}}
-* Korean: {{t+|ko|아름답다}}, {{t+|ko|아름다운}} {{qualifier|determiner}}
+* Korean: {{t+|ko|아름답다}}
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t|ku|ئێسک سووک}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
@@ -137,7 +137,9 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Novial: {{t|nov|beli}}
 * Occitan: {{t+|oc|bèl|m}}, {{t+|oc|bèla|f}}, {{t+|oc|bèu|m}}
 * Okinawan: {{t|ryu|清らさん}}, {{t|ryu|美らさん|tr=ちゅらさん, churasan}}
-* Old Church Slavonic: {{t|cu|красьнъ|sc=Cyrs}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|ⰾⱑⱂⱏ}}
+*: Glagolitic: {{t|cu|лѣпъ}}, {{t|cu|красьнъ}}
 * Old English: {{t|ang|wlitig}}, {{t|ang|fæger}}, {{t|ang|freawlitig}}, {{t|ang|gebleod}}, {{t|ang|hleortorht}}, {{t|ang|sciene}}, {{t|ang|hiwbeorht}}, {{t|ang|torht}}, {{t|ang|freolic}}, {{t|ang|smicer}}, {{t|ang|wliteful}}, {{t|ang|wlitescine}}, {{t|ang|cyme}}, {{t|ang|cymlic}}
 * Old Norse: {{t|non|fagr}}
 * Old Occitan: {{t|pro|bel}}
@@ -145,7 +147,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Persian: {{t+|fa|زیبا|tr=zibâ}}, {{t+|fa|قشنگ|tr=qašang}}
 * Polish: {{t+|pl|piękny}}
 * Portuguese: {{t+|pt|belo|m}}, {{t+|pt|bela|f}}, {{t+|pt|bonito|m}}, {{t+|pt|bonita|f}}, {{t+|pt|lindo|m}}, {{t+|pt|linda|f}}
-* Punjabi: {{t|pa|ਸੁਹਣਾ|tr=suhṇā|m}}, {{t|pa|ਸੁਹਣੀ|tr=suhṇī|f}}
+* Punjabi: {{t|pa|ਸੁਹਣਾ}}
 * Quechua: {{t+|qu|sumaq}}, {{t|qu|şumag}}, {{t|qu|k'acha}}
 * Romanian: {{t+|ro|frumos|m|n}}, {{t+|ro|frumoasă|f}}
 * Romansch: {{t|rm|bel|m}}, {{t|rm|bella|f}}, {{t|rm|bi|m}}, {{t|rm|biala|f}}
