--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -156,8 +156,8 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Sardinian: {{t|sc|bedhu|m}}, {{t|sc|bedha|f}}, {{t|sc|bellu|m}}, {{t|sc|bella|f}}
 * Scottish Gaelic: {{t|gd|àlainn}}, {{t|gd|bòidheach}}, {{t|gd|brèagha}}, {{t|gd|fèilleil}}, {{t|gd|grinn}}, {{t|gd|maiseach}}, {{t|gd|rìomhach}}, {{t|gd|sgèimheach}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|леп}}, {{t|sh|лијеп}}
-*: Roman: {{t+|sh|lep}}, {{t+|sh|lijep}}
+*: Cyrillic: {{t|sh|ле̑п}}, {{t|sh|лије̑п}}, {{t|sh|лип}}
+*: Roman: {{t+|sh|lȇp}}, {{t+|sh|lijȇp}}, {{t+|sh|lip}}
 * Sicilian: {{t+|scn|beddu|m}}, {{t+|scn|bedda|f}}
 * Sinhalese: {{t+|si|ලස්සන|sc=Sinh}}, {{t|si|සුන්දර|sc=Sinh}}
 * Slovak: {{t|sk|krásny}}, {{t|sk|pekný}}
