--- a/en/昒/昒.16954.wikitext
+++ b/en/昒/昒.16954.wikitext
@@ -9,12 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[fat1]]|y=fat1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日04}}
+===Pronunciation===
+{{zh-pron
+|m=hū
+|c=fat1
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -26,13 +39,4 @@
 # {{defn|lang=ja|sort=日04}}
 
 ====Readings====
-* {{ja-readings|on=[[こつ]] (kotsu), [[こち]] (kochi), [[ぶつ]] (butsu), [[もち]] (mochi)|kun=[[よあけ]] (yoake)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[hū]] ([[hu1]])|wg=hu<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
+{{ja-readings|on=[[こつ]] (kotsu), [[こち]] (kochi), [[ぶつ]] (butsu), [[もち]] (mochi)|kun=[[よあけ]] (yoake)}}
