--- a/en/坅/坅.13000.wikitext
+++ b/en/坅/坅.13000.wikitext
@@ -9,12 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gam2]]|y=gam2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土04}}
+===Pronunciation===
+{{zh-pron
+|m=qǐn
+|c=gam2,jam2
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -26,13 +39,4 @@
 # {{defn|lang=ja|sort=土04}}
 
 ====Readings====
-* {{ja-readings|on=[[きん]] (kin), [[こん]] (kon), [[ぎん]] (gin), [[ごん]] (gon), [[さん]] (san)|kun=[[あな]] (ana)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qǐn]] ([[qin3]])|wg=ch'in<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
+{{ja-readings|on=[[きん]] (kin), [[こん]] (kon), [[ぎん]] (gin), [[ごん]] (gon), [[さん]] (san)|kun=[[あな]] (ana)}}
