--- a/en/昩/昩.16977.wikitext
+++ b/en/昩/昩.16977.wikitext
@@ -9,12 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[mut6]]|y=mut6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日05}}
+===Pronunciation===
+{{zh-pron
+|m=mò
+|c=mut6
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
@@ -29,13 +42,4 @@
 # {{defn|lang=ja|sort=日05}}
 
 ====Readings====
-* {{ja-readings|on=[[ばつ]] (batsu), [[まち]] (machi)|kun=[[くもる]] (kumoru), [[ほし]] (hoshi)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mò]] ([[mo4]])|wg=mo<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
+{{ja-readings|on=[[ばつ]] (batsu), [[まち]] (machi)|kun=[[くもる]] (kumoru), [[ほし]] (hoshi)}}
