--- a/en/惲/惲.15623.wikitext
+++ b/en/惲/惲.15623.wikitext
@@ -5,10 +5,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=97052|canj=PBJJ|ids=⿰忄軍}}
 
-# [[devise]], [[plan]], [[deliberate]]
-# [[consult]]
-# a [[surname]]
-
 ====References====
 * {{Han ref|kx=0392.250|dkj=10857|dj=0728.090|hdz=42331.100|uh=60F2|ud=24818|bh=D940|bd=55616}}
 
@@ -26,13 +22,16 @@
 |c=wan6,wan2
 |mc=y
 |oc=y
-|cat=
+|cat=v,pn
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# to [[devise]]; to [[plan]]; to [[deliberate]]
+# to [[consult]]
+# a [[surname]]
+#: {{zh-x|^惲 ^代-英|{{w|Yun Daiying|'''Yun''' Daiying}}}}
 
 ===References===
 * {{R:yue:mfccd}}
