--- a/en/惲/惲.15623.wikitext
+++ b/en/惲/惲.15623.wikitext
@@ -30,7 +30,7 @@
 
 # to [[devise]]; to [[plan]]; to [[deliberate]]
 # to [[consult]]
-# a [[surname]]
+# {{surname|lang=zh}}
 #: {{zh-x|^惲 ^代-英|{{w|Yun Daiying|'''Yun''' Daiying}}, early leader of the Communist Party of China}}
 
 ===References===
