--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -245,7 +245,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Northern Thai: {{t|nod|ᨾᩣ|tr=ma|sc=Lana}}
 * Norwegian: {{t+|no|komme}}
 * Occitan: {{t+|oc|venir}}, {{t|oc|vir}}
-* Old Assamese: {{t|inc-oas|আস্}}, {{inc-oas|আ}}
+* Old Assamese: {{t|inc-oas|আস্}}, {{t|inc-oas|আ}}
 * Old English: {{t|ang|cuman}}
 * Old Saxon: {{t|osx|kuman}}
 * Old Turkic: {{t|otk|𐰚𐰠|tr=kel-}}
