--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -5,10 +5,11 @@
 From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonre}}, {{m|enm|thunnere}}, {{m|enm|þunre}}, from {{inh|en|ang|þunor|t=thunder}}, from {{inh|en|gem-pro|*þunraz}}, from {{der|en|ine-pro|*(s)ten-}}, {{m|ine-pro|*(s)tenh₂-||to thunder}}. Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates include {{cog|fy|tonger}}, {{cog|nl|donder}}, {{cog|de|Donner}}, {{cog|non|Þórr}} ({{cog|en|Thor}}), {{cog|da|torden}}. Other cognates include {{cog|fa|تندر|tr=tondar}}, {{cog|la|tonō}}, {{m|la|detonō}}, {{cog|grc|στένω}}, {{m|grc|στενάζω}}, {{m|grc|στόνος}}, {{m|grc|Στέντωρ}}, {{cog|ga|torann}}, {{cog|cy|taran}}, {{cog|cel-gau|Taranis}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈθʌn.də/|lang=en}}
-* {{a|US}} {{enPR|thŭn'dər}}, {{IPA|/ˈθʌn.dɚ/|lang=en}}
+* {{a|RP}} {{IPA|/ˈθʌndə/|lang=en}}
+* {{a|GA}} {{enPR|thŭn′dər}}, {{IPA|/ˈθʌndɚ/|lang=en}}
 * {{audio|en-us-thunder.ogg|Audio (US)|lang=en}}
 * {{rhymes|ʌndə(ɹ)|lang=en}}
+* {{hyph|thun|der|lang=en}}
 
 ===Noun===
 {{wikipedia}}
