--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -277,4 +277,4 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 ===Interjection===
 {{head|sv|interjection}}
 
-# [[sigh]]
+# [[sigh#Interjection|sigh]]
