--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -28,6 +28,6 @@ From {{inh|ru|sla-pro|*maslěnica}}, from {{affix|sla-pro|*maslěnъjь|*-ica|no
 * {{l|ru|блин}}
 
 ===References===
-* {{R:sla:ESSJa|recons=*maslěnica|page=223|vol=17}}
+* {{R:sla:ESSJa|*maslěnica|223|17}}
 
 [[Category:Russian words suffixed with -ница]]
