--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -174,6 +174,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * Lithuanian: {{t|lt|išrinkti}}
 * Malay: {{t|ms|pilih}}
 * Maltese: {{t|mt|ħatar}}, {{t|mt|talla'}}
+* Maori: {{t|mi|kōwhiri }}, {{t|mi|pōti }}
 * Mongolian: {{t+|mn|сонгох|sc=Cyrl}}
 * Persian: {{t+|fa|برگزیدن}}, {{t+|fa|انتخاب کردن|sc=fa-Arab}}
 * Polish: {{t+|pl|wybierać}}, {{t+|pl|wybrać}}
