--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -319,7 +319,7 @@
 ===Interjection===
 {{en-interjection}}
 
-# {{lb|en|colloquial|music}} A high-pitched vocal sound used in the genre of [[Soundcloud rap]] to imitate a [[gunshot]]. 
+# {{lb|en|US|colloquial|music}} A high-pitched vocal sound used in the genre of [[Soundcloud rap]] to imitate a [[gunshot]].
 
 ===Anagrams===
 * {{anagrams|en|a=ikrst|Kirst|stirk}}
