--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -27,6 +27,18 @@
 
 ----
 
+==Afrikaans==
+
+===Etymology===
+From {{inh|af|nl|lies}}.
+
+===Noun===
+{{af-noun|e|pl2=lieste}}
+
+# [[loins]], region near the [[groin]]
+
+{{C|af|Body parts}}
+----
 ==Dutch==
 
 ===Pronunciation===
@@ -37,7 +49,7 @@
 ===Noun===
 {{nl-noun|f|g2=m|-zen|-}}
 
-# {{topics|nl|Body parts}} region near the [[groin]]
+# {{topics|nl|Body parts}} [[loins]], region near the [[groin]]
 
 ----
 
