--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -53,7 +53,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 * German: {{t+|de|haften}}, {{t+|de|klammern}}
 {{trans-mid}}
 * Indonesian: {{t+|id|sangkut|alt=menyangkut}}, {{t+|id|sangkut|alt=menyangkutkan}}, {{t+|id|gantung|alt=bergantung}}, {{t+|id|gantung|alt=menggantung}}, {{t+|id|gantung|alt=menggantungkan}}
-* Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources|ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>, {{t+|it|abbarbicarsi}}, {{t|it|appiccicarsi}}, {{t|it|avvilupparsi}}
+* Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources|ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>, {{t+|it|abbarbicarsi}}, {{t|it|appiccicarsi}}, {{t|it|avvilupparsi}}, {{t+|it|aderire}}, {{t+|it|attaccarsi}}
 * Japanese: {{t+|ja|掛ける|tr=かける, kakeru}}, {{t|ja|ぶら下がる|tr=ぶらさがる, burasagaru}} {{qualifier|intransitive}}, {{t|ja|ぶら下げる|tr=ぶらさげる, burasageru}} {{qualifier|transitive}}
 * Maori: {{t|mi|whakaawhiawhi}}, {{t|mi|aropiri}}, {{t|mi|napi}}, {{t|mi|nanapi}}, {{t|mi|tāmaua}}
 * Norwegian: {{t|no|klenge}}
