--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -94,6 +94,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 *: Sorani: {{t|ckb|پەردە|tr=perde}}
 * Kyrgyz: {{t|ky|парда|sc=Cyrl}}
 * Lao: {{t|lo|ຜ້າມ່ານ}}, {{t|lo|ເກີ້ງ}}, {{t|lo|ມ່ານ}}, {{t|lo|ວິສູດ}}, {{t|lo|ສາກ}}, {{t+|lo|ຜ້າກັ້ງ}}
+* Latin: {{t|la|plagula|f}}
 * Latvian: {{t|lv|aizkars|m}}
 * Lithuanian: {{t|lt|užuolaida|f}}
 * Luxembourgish: {{t|lb|Rido|f}}
