--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -236,7 +236,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * German: {{t+|de|Butter|f}}
 * Gottscheerish: {{t|gmw-gts|púttər|m|f|n}}
 * Greek: {{t+|el|βούτυρο|n}}
-*: Ancient: {{t|grc|βούτυρον|n|sc=polytonic}}
+*: Ancient: {{t|grc|βούτυρον|n}}
 *: Cappadocian: {{t|cpg|καράκι}}
 * Greenlandic: {{t|kl|punneq}}
 * Gujarati: {{t+|gu|માખણ|n}}, {{t|gu|મસ્કો}}
