--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -169,6 +169,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Hebrew: {{t|he|גֶּרְמַנְיָה|f|tr=germánya}}, {{t|he|אַשְׁכְּנַז|tr=ashkenáz}} {{qualifier|medieval}}
 * Hindi: {{t+|hi|जर्मनी|m}}
 * Hungarian: {{t+|hu|Németország}}
+* Hunsrik: {{t|hrx|Deitschland|n}}
 * Icelandic: {{t+|is|Þýskaland|n}}
 * Ido: {{t+|io|Germania}}
 * Igbo: {{t|ig|Jémanị}}
