--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -144,6 +144,7 @@ From the above verb.
 # {{lb|en|materials science}} An increase in [[strain]] with time; the gradual [[flow]] or [[deformation]] of a material under [[stress]].
 # {{lb|en|geology}} The [[imperceptible]] [[downslope]] movement of surface [[rock]].
 # {{lb|en|informal|pejorative}} someone unpleasantly strange or eccentric
+# {{lb|en|informal|pejorative}} A frightening and/or disconcerting person, especially one who gives the speaker [[chills]] or who induces [[psychosomatic]] facial itching.
 #: ''Stop following me, you '''creep'''!''
 # {{lb|en|agriculture}} A barrier with small openings used to keep large animals out while allowing smaller animals to pass through.
 
