--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -50,7 +50,7 @@
 # [[great]]
 
 ====Usage notes====
-''{{w|Xiandai Hanyu Guifan Cidian|A Standard Dictionary of Current Chinese}}'' ({{w2|zh|pref=《|现代汉语规范词典|suf=》}}) proscribes the use of the pronunciation [[guī]].
+''{{w|Xiandai Hanyu Guifan Cidian}}'' ({{w2|zh|pref=《|现代汉语规范词典|suf=》}}) proscribes the use of the pronunciation [[guī]].
 
 ====Compounds====
 {{zh-der|傀偉|傀儡:guīlěi|傀奇|傀然}}
