--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -136,7 +136,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * French: {{t+|fr|chair|f}}
 * German: {{t+|de|Fleisch|n}}
 * Greek: {{t+|el|κρέας|n}}
-*: Ancient Greek: {{t|grc|κρέας|n}}
+*: Ancient: {{t|grc|κρέας|n|sc=polytonic}}
 * Hungarian: {{t+|hu|hús}}
 * Irish: {{t+|ga|feoil|f}}
 {{trans-mid}}
