--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -2,7 +2,7 @@
 {{character info/new}}
 ==Translingual==
 {{stroke order|strokes=11}}
-
+{{ja-forms|[[仮]]|假|假}}
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=27247|canj=ORYE|ids=⿰亻叚}}
 
