--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -87,7 +87,7 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 
 # {{lb|zh|Cantonese|Hakka|Teochew}} [[egg]]; [[roe]]
 # {{lb|zh|Cantonese|vulgar}} [[testicle]]
-# {{lb|zh|Cantonese|vulgar}} {{rfdef|zh}}
+# {{lb|zh|Cantonese|vulgar}} [[goddamn]], [[the hell]] {{rfdef|zh}}
 
 ====Compounds====
 {{zh-der|雞春|魚春|多春魚|春袋|春核|蝦春|石春|水蛇春咁長|乜春|鵝春石}}
