--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -122,6 +122,7 @@ From {{etyl|enm|en}} {{m|enm|crepen}}, from {{etyl|ang|en}} {{m|ang|crēopan||to
 * Finnish: {{t+|fi|värisyttää}}, {{t|fi|[[aiheuttaa]] [[väristyksiä]]}}
 {{trans-mid}}
 * Portuguese: {{t|pt|formigar}}
+* Spanish: {{t+|es|hormigueo|m}}
 {{trans-bottom}}
 
 {{trans-top|to drag in deep water with creepers}}
