--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -236,7 +236,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * German: {{t|de|mies sein}}, {{t|de|zum Kotzen sein}}, {{t|de|Scheiße sein}}
 * Greek: {{t|el|άστα να πάνε|sc=Grek}} {{qualifier|situation}}, {{t|el|είμαι μαλάκας|sc=Grek}} {{qualifier|person}}
 {{trans-mid}}
-* Hungarian: {{t+|hu|ócska}}, {{t+|hu|vacak}}, {{t+|hu|pocsék}}, {{t+|hu|gáz}}, {{t|hu|szívás}}
+* Hungarian: {{t+|hu|ócska}}, {{t+|hu|vacak}}, {{lb|hu|colloquial}} {{t+|hu|pocsék}}, {{lb|hu|slang}} {{t+|hu|gáz}}
 * Icelandic: {{t|is|sökka}}, {{t+|is|ömurlegur|m}}
 * Italian: {{t|it|essere una schiappa}}, {{t|it|fare schifo}}
 * Japanese: {{t|ja|サック|tr=sakku|sc=Jpan}}
