--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -27,7 +27,7 @@ From {{etyl|enm|en}} {{m|enm|costen}}, from {{etyl|fro|en}} {{m|fro|coster}}, {{
 # To require to be borne or suffered; to cause.
 #* {{rfdate||and other bibliographic particulars}} {{w|John Milton}}
 #*: to do him wanton rites, which '''cost''' them woe
-#* '''1977, ''{{w|Star Wars}}''
+#* '''1977''', ''{{w|Star Wars}}''
 #*: LUKE: "That little droid is going to '''cost''' me a lot of trouble."
 # To [[calculate]] or [[estimate]] a price.
 #: {{ux|en|I'd '''cost''' the repair work at a few thousand.}}
