--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -68,7 +68,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Galician: {{t+|gl|substancia|f}}
 * German: {{t+|de|Substanz|f}}, {{t+|de|Stoff|m}}
 * Greek: {{t+|el|ουσία|f}}
-*: Ancient Greek: {{t|grc|οὐσία|f}}, {{t|grc|ὑπόστασις|f}}
+*: Ancient: {{t|grc|οὐσία|f}}, {{t|grc|ὑπόστασις|f}}
 * Hebrew: {{t+|he|חומר|m|tr=khómer}}
 * Hindi: {{t+|hi|पदार्थ|m|tr=padārth}}
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
@@ -106,7 +106,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Galician: {{t+|gl|substancia|f}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t+|el|ουσία|f}}
-*: Ancient Greek: {{t|grc|οὐσία|f}}
+*: Ancient: {{t|grc|οὐσία|f}}
 * Hebrew: {{t|he|תוכן|m|tr=tókhen}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|lényeg}}, {{t+|hu|szubsztancia}}
