--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -147,8 +147,8 @@ From {{etyl|enm|en}} {{m|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to co
 #: {{ux|en|We have to cut '''costs''' if we want to avoid bankruptcy.}}
 #: {{ux|en|The average '''cost''' of a new house is twice as much as it was 20 years ago.}}
 # A negative [[consequence]] or loss that occurs or is required to occur.
-#: {{ux|en|There were many '''costs''' to the development project, the least of all was the financial aspect.}}
-#: {{ux|en|If you train all the time, there will be a few '''costs''' such as a lack of free time.}}
+#: {{ux|en|Spending all your time working may earn you a lot of money at the '''cost''' of your health.}}
+#: {{ux|en|The army won the battle decisively, but at a '''cost''' of many lives.}}
 
 =====Hyponyms=====
 {{hyp4|lang=en|{{l|en|appraisal cost}}
