--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -82,12 +82,12 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 |{{l|en|pushy}}
 }}
 
-====Related terms====
+=====Related terms=====
 * {{l|en|pedal pushers}}
 * {{l|en|push it}}
 
 =====Translations=====
-{{trans-top|transitive: apply a force to (an object) so that it moves away}}
+{{trans-top|to apply a force to something so that it moves away}}
 * Albanian: {{t+|sq|shtyj}}
 * Arabic: {{t+|ar|دَفَعَ}}
 *: Egyptian Arabic: {{t|ar|زق|tr=zaqq}}
@@ -167,7 +167,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Swahili: {{t|sw|kusukuma}}
 * Swedish: {{t+|sv|skjuta}}
 * Tajik: {{t|tg|тела додан}}
-* Telugu: {{t+|te|నెట్టు|sc=Telu}}, {{t+|te|తోయు|sc=Telu}}
+* Telugu: {{t+|te|నెట్టు|sc=Telu}}, {{t+|te|తోయు|sc=Telu}} {{q|tr.}}; {{t|te|శక్తివంతముగా తోయుట|sc=Telu}} {{q|intr.}}
 * Thai: {{t+|th|ดัน}}, {{t+|th|กด}}, {{t+|th|ผลัก}}
 * Turkish: {{t+|tr|itmek}}, {{t+|tr|itelemek}}
 * Turkmen: {{t|tk|itmek}}, {{t|tk|itelemek}}
@@ -182,10 +182,10 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * West Frisian: {{t|fy|triuwe}}
 {{trans-bottom}}
 
-{{trans-top|continually attempt to persuade (a person)}}
+{{trans-top|to continually attempt to persuade into a particular action}}
 * Czech: {{t+|cs|pohánět}}
 * Esperanto: {{t|eo|peli}}
-* Finnish: {{t+|fi|painostaa}}
+* Finnish: {{t+|fi|painostaa}}, {{t|fi|vaatia}}
 * German: {{t+|de|drängen}}
 * Italian: {{t+|it|spingere}}, {{t+|it|insistere}}
 * Khmer: {{t+|km|ជំរុញ}}
@@ -199,43 +199,29 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Telugu: {{t|te|నిరంతర వత్తిడి|sc=Telu}}
 {{trans-bottom}}
 
-{{trans-top|continually attempt to promote (a point of view)}}
-* Finnish: {{t+|fi|ajaa}}
-* Italian: {{t+|it|spingere}}
+{{trans-top|to press or urge forward; to drive}}
+* Finnish: {{t|fi|ajaa}}, {{t|fi|tavoitella}}; {{t|fi|venyttää}} {{q|luck}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|to continually attempt to promote point of view, product etc.}}
+* Czech: {{t|cs|prosazovat}} {{q|product}}
+* Finnish: {{t|fi|tyrkyttää}}
+* Italian: {{t+|it|spingere}} {{q|point of view}}; {{t|it|preclamizzare}}, {{t+|it|promuovere}}, {{t+|it|pubblicizzare}} {{q|product}}
 * Kurdish:
 *: Sorani: {{t|ckb|پاڵ پێوه‌نان|sc=ku-Arab}}
 {{trans-mid}}
-* Russian: {{t+|ru|продвига́ть|impf}}, {{t+|ru|прота́лкивать|impf}}
-* Telugu: {{t|te|ఆగగని ప్రతిపాదన|sc=Telu}}
+* Russian: {{t+|ru|продвига́ть|impf}}; {{t+|ru|прота́лкивать|impf}} {{q|point of view}}
+* Telugu: {{t|te|ఆగగని ప్రతిపాదన|sc=Telu}} {{q|point of view}}, {{t+|te|ప్రతిపాదించు|sc=Telu}} {{q|product}}
+* Venetian: {{t|vec|far reclam}} {{q|product}}
 {{trans-bottom}}
 
-{{trans-top|promote (a product)}}
-* Czech: {{t|cs|prosazovat}}
-* Finnish: {{t+|fi|tyrkyttää}}
-* Italian: {{t|it|preclamizzare}}, {{t+|it|promuovere}}, {{t+|it|pubblicizzare}}
+{{trans-top|to approach; to come close to}}
+* Finnish: {{t|fi|lähestyä}}
 {{trans-mid}}
-* Russian: {{t+|ru|продвига́ть|impf}}
-* Telugu: {{t+|te|ప్రతిపాదించు|sc=Telu}}
-* Venetian: {{t|vec|far reclam}}
 {{trans-bottom}}
 
-{{trans-top|intransitive: apply force to an object so that it moves away}}
-* Czech: {{t+|cs|tlačit}}
-* Esperanto: {{t+|eo|puŝi}}
-* Finnish: {{t+|fi|työntää}}
-* French: {{t+|fr|pousser}}
-* German: {{t+|de|drücken}}, {{t+|de|schieben}}, {{t+|de|stoßen}}
-* Italian: {{t+|it|spingere}}
-{{trans-mid}}
-* Kurdish:
-*: Sorani: {{t|ckb|پاڵ نان|sc=ku-Arab}}
-* Russian: {{t+|ru|толка́ть|impf}}
-* Scottish Gaelic: {{t|gd|stob}}
-* Telugu: {{t|te|శక్తివంతముగా తోయుట|sc=Telu}}
-* Venetian: {{t+|vec|pender}}, {{t+|vec|spender}}
-{{trans-bottom}}
-
-{{trans-top|intransitive: tense the muscles of the abdomen}}
+{{trans-top|intransitive: to tense the muscles of the abdomen in order to expel its contents}}
 * Arabic: {{t-needed|ar}}
 * Czech: {{t+|cs|tlačit}}
 * Finnish: {{t+|fi|ponnistaa}}, {{t+|fi|työntää}}
@@ -250,16 +236,45 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Venetian: {{t+|vec|pender}}, {{t+|vec|spender}}
 {{trans-bottom}}
 
-{{trans-top|(intrans.) continue to attempt to persuade a person into a particular course of action}}
-* Finnish: {{t+|fi|ajaa}}, {{t+|fi|painostaa}}
+{{trans-top|to continue to attempt to persuade a person into a particular course of action}}
+* Finnish: {{t+|fi|painostaa}}
 {{trans-mid}}
 * Telugu: {{t|te|బలవంతంగా చేయించు|sc=Telu}}
 {{trans-bottom}}
 
-{{trans-top|try to skip positions in a queue}}
-* Finnish: {{t+|fi|töniä}}, {{t+|fi|etuilla}}
+{{trans-top|to make a higher bid at an auction}}
+* Finnish: {{t|fi|korottaa}}
 {{trans-mid}}
-* German: {{t+|de|drängeln}}, {{t|de|vordrängeln|alt=sich vordrängeln}}
+{{trans-bottom}}
+
+{{trans-top|poker: to make an all-in bet}}
+* Finnish: {{t|fi|[[panna]] [[kaikki]] [[peliin]]}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|chess: to move a pawn directly forward}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|computing: to add a data item to the top of a stack}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|computing: to publish an update, etc. by transmitting it to other computers}}
+* Finnish: {{t|fi|työntää}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-see|to thrust the points of the horns against|gore}}
+
+{{trans-top|to burst out of its pot, as a bud or shoot}}
+* Finnish: {{t|fi|puhjeta}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|snooker: to strike the cue ball in such a way that it stays in contact with the cue and object ball at the same time}}
+* Finnish: {{t|fi|työntää}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ====Noun====
