--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -45,6 +45,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 
 ====Derived terms====
 {{der3|lang=en
+|{{vern|African saffron}} ({{taxlink|Lyperia crocea|species|ver=190129}})
 |{{vern|bastard saffron}} ({{taxlink|Cassine peragua|species|noshow=1}})
 |{{vern|dyer's saffron}} (''{{l|mul|Carthamus tinctorius}}'')
 |{{l|en|meadow saffron}} (''{{l|mul|Colchicum autumnale}}'')
