--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -48,9 +48,6 @@
 ===Kanji===
 {{ja-kanji|grade=6|rs=日05}}
 
-# a [[reflection]]; to [[reflect]]
-# a [[projection]]; to [[project]]
-
 ====Readings====
 {{ja-readings
 |goon=よう<やう
@@ -62,10 +59,22 @@
 ====Compounds====
 {{der-top|Compounds}}
 * {{ja-r|映る|うつる}}: to be [[reflect|reflected]]; to [[appear]] as an [[image]]; to [[match]] or go well with something {{qualifier|in terms of color coordination}}
-* {{ja-r|映画|えいが}}: a [[movie]]
-* {{ja-r|映写|えいしゃ}}: a [[projection]]; to [[project]] something {{qualifier|an image}}
-* {{ja-r|映像|えいぞう}}: an [[image]] {{qualifier|especially one on a screen or in one's mind}}, a [[reflection]]
 {{der-bottom}}
+
+===Etymology===
+{{ja-kanjitab|えい|yomi=kanon}}
+From {{der|ja|ltc|sort=えい|-}} {{ltc-l|映|id=2}}.
+
+The ''[[漢音#Japanese|kan'on]]'' pronunciation, so likely a later borrowing.
+
+===Pronunciation===
+{{ja-pron|えい|y=kanon}}
+
+===Affix===
+{{ja-pos|affix|えい}}
+
+# a [[reflection]]; to [[reflect]]
+# a [[projection]]; to [[project]]
 
 ----
 
