--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -89,6 +89,8 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Khmer: {{t+|km|ក្អួត|tr=k’uət}}
 * Komi-Permyak: {{t|koi|восны}}
 * Korean: {{t+|ko|게우다}}, {{t+|ko|토하다}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|ڕِشانەوە}}
 * Kyrgyz: {{t|ky|кусуу}}
 * Ladin: {{t|lld|peté su}}, {{t|lld|tré l boppn}}
 {{trans-mid}}
