--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -37,6 +37,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Esperanto: {{qualifier|♂♀}} {{t|eo|blondulo}}, {{qualifier|♂}} {{t|eo|virblondulo}}, {{qualifier|♀}} {{t|eo|blondulino}}
 * Finnish: {{t+|fi|vaaleaverikkö}}
 * French: {{t+|fr|blond|m}}, {{t+|fr|blonde|f}}
+* Galician: {{t+|gl|louro}}, {{t+|gl|rubio}}
 * Georgian: {{t|ka|ქერა}}
 * German: {{t|de|Blonder|m}}, {{t|de|Blondin|m}} {{qualifier|obsolete}}, {{t|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t|de|Blondhaariger|m}}, {{t|de|Blondhaarige|f}}, {{t|de|Flachshaariger|m}}, {{t|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t|de|Blondschopf|m}}
 * Hebrew: {{t|he|בְּלוֹנְדִּינִי|m|tr=blondíni}}, {{t|he|בְּלוֹנְדִּינִית|f|tr=blondínit}}
