--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -23,8 +23,9 @@ Note that 昔 has meaning of “past, ending”, hence connotations of “feelin
 |m=惜
 |c=sik1,sek3
 |c_note=sik1 - literary; sek3 - vernacular
-|h=pfs=siak/sit
-|h_note=siak - vernacular; sit - literary
+|h=pfs=siak/sit;gd=xiag5/xid5;
+|h_note=Sixian: siak - vernacular; sit - literary;
+Meixian: xiag5 - vernacular; xid5 - literary
 |md=sék
 |mn=qz:siak/tw,xm,zz:sek/sioh
 |mn_note=siak/sek - literary; sioh - vernacular
