--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -2,9 +2,6 @@
 ==English==
 {{wikipedia|dab=pull}}
 
-===Etymology===
-From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluck off}}. Related to {{cog|fy|pûlje|t=to shell, husk}}, {{cog|dum|pullen|t=to drink}}, {{cog|dum|polen|t=to peel, strip}}, {{cog|nds|pulen|t=to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla|t=to work hard, beat}}.
-
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/|lang=en}}
 * {{audio|en-us-pull.ogg|Audio (US)|lang=en}}
@@ -12,7 +9,10 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * {{hyphenation|pull|lang=en}}
 * {{rhymes|ʊl|lang=en}}
 
-===Noun===
+===Etymology 1===
+From {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m|enm|pullen|t=to pull}} (see below).
+
+====Noun====
 {{en-noun|~}}
 
 # An act of pulling (applying force)
@@ -46,28 +46,28 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 #*: The '''pull''' is not a legitimate stroke, but bad cricket.
 # {{lb|en|golf}} A mishit shot which travels in a straight line and (for a right-handed player) left of the intended path.
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|act of pulling}} {{l|en|tug}}, {{l|en|yank}}
 * {{sense|attractive force}} {{l|en|attraction}}
 * {{sense|device meant to be pulled}} {{l|en|handle}}, {{l|en|knob}}, {{l|en|lever}}, {{l|en|rope}}
 * {{sense|influence}} {{l|en|influence}}, {{l|en|sway}}
 * {{sense|a puff on a cigarette}} {{l|en|drag}}, {{l|en|toke}} {{q|marijuana cigarette}}
 
-====Antonyms====
+=====Antonyms=====
 * {{sense|act of pulling}} {{l|en|push}}, {{l|en|shove}}
 * {{sense|attractive force}} {{l|en|repulsion}}
 * {{sense|device meant to be pulled}} {{l|en|button}}, {{l|en|push}}, {{l|en|push-button}}
 * {{sense|influence}}
 
-====Derived terms====
+=====Derived terms=====
 * {{l|en|ring-pull}}
 
-====Related terms====
+=====Related terms=====
 * {{l|en|on the pull}}
 * {{l|en|pull cord}}
 * {{l|en|ring-pull}}, {{l|en|ring pull}}
 
-====Translations====
+=====Translations=====
 {{trans-top|act of pulling}}
 * Chinese:
 *: Mandarin: {{t+|cmn|拉|tr=lā|sc=Hani}}
@@ -119,7 +119,10 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 {{trans-mid}}
 {{trans-bottom}}
 
-===Verb===
+===Etymology 2===
+From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluck off}}. Related to {{cog|fy|pûlje|t=to shell, husk}}, {{cog|dum|pullen|t=to drink}}, {{cog|dum|polen|t=to peel, strip}}, {{cog|nds|pulen|t=to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla|t=to work hard, beat}}.
+
+====Verb====
 {{en-verb}}
 
 # {{lb|en|transitive|intransitive}} To apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force.
@@ -177,7 +180,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 #: ''Let's stop at Finnigan's. The barman '''pulls''' a good pint.''
 # {{lb|en|rail transportation|US|of a railroad car}} To [[pull out]] from a [[yard]] or [[station]]; to [[leave]].
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|apply force to (something) so it comes toward}} {{l|en|drag}}, {{l|en|tow}}, {{l|en|tug}}, {{l|en|yank}}
 * {{sense|slang: to persuade to have sex with one}} {{l|en|score}}
 * {{sense|to remove from circulation}} {{l|en|recall}}, {{l|en|withdraw}}, {{l|en|yank}}
@@ -185,10 +188,10 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * {{sense|to retrieve or generate for use}} {{l|en|generate}}, {{l|en|get}}, {{l|en|get hold of}}, {{l|en|get one's hands on}}, {{l|en|lay one's hands on}}, {{l|en|obtain}}, {{l|en|retrieve}}
 * {{sense|to succeed in finding a person with whom to have sex.}} {{l|en|score}}
 
-====Antonyms====
+=====Antonyms=====
 * {{sense|apply force to (something) so it comes towards one}} {{l|en|push}}, {{l|en|repel}}, {{l|en|shove}}
 
-====Hyponyms====
+=====Hyponyms=====
 {{rel4|lang=en|title=Hyponyms of ''pull'' (verb)
 |[[pull a face]]
 |[[pull a fast one]]
@@ -208,12 +211,12 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 |[[pull up]]<!--"pull-up" is derived from "pull up"-->
 }}
 
-====Derived terms====
+=====Derived terms=====
 * {{l|en|pull-quote}}
 * {{l|en|pulling}}
 * {{l|en|overpull}}
 
-====Related terms====
+=====Related terms=====
 {{rel4|lang=en|title=Terms related to ''pull'' (verb)
 |[[it's not the whistle that pulls the train]]
 |[[pull a|pull a...]]
@@ -233,7 +236,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 }}
 ''See also'' '''[[pulling]]'''<!--as "pulling power"-->
 
-====Translations====
+=====Translations=====
 {{trans-top|transitive: apply force to (something) so it comes towards one}}
 * Albanian: {{t+|sq|tërheq}}
 * Arabic: {{t|ar|جَرَّ}}, {{t|ar|سَحَبَ}}
@@ -377,7 +380,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * French: {{t+|fr|tirer un coup}}
 {{trans-bottom}}
 
-===Interjection===
+====Interjection====
 {{en-interj}}
 
 # {{lb|en|sports}} {{non-gloss definition|Command used by a target shooter to request that the target be released/launched.}}
