--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -185,6 +185,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 # The [[act]] of [[#Verb|counting]] or [[tally]]ing a quantity.
 #: ''Give the chairs a quick '''count''' to check if we have enough.''
 # The result of a [[tally]] that reveals the [[number]] of items in a set; a [[quantity]] [[counted]].
+#* {{quote-book|title={{w|The Sixth Extinction: An Unnatural History}}|year=2014|author={{w|Elizabeth Kolbert}}|publisher=Picador|ISBN=9781250062185|passage=By the official '''count''', there are something like thirteen hundred species of birds in the Amazon, but Cohn-Haft thinks there are actually a good many more, because people have relied too much on features like size and plumage and not paid enough attention to sound.|page=177}}
 # A [[countdown]].
 # {{lb|en|legal}} A [[charge]] of misconduct brought in a [[legal]] proceeding.
 # {{lb|en|baseball}} The number of [[balls]] and [[strikes]], respectively, on a batter's in-progress [[plate appearance]].
