--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -62,7 +62,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 }}
 
 ====Descendants====
-* {{desc|srn|feti|bor=1}}
+* {{desc|srn|feti}}
 
 ====Translations====
 {{trans-top|(intransitive) to contend in physical conflict}}
