--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -207,6 +207,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Icelandic: {{t|is|heyja}}
 * Japanese: {{t+|ja|戦う|sc=Jpan}}, {{t+|ja|闘う|tr=[[たたかう]], tatakau|sc=Jpan}}
 {{trans-mid}}
+* Maori: {{t|mi|āpiti }} {{qualifier|at close quarters}}
 * Norwegian: {{t+|no|slåss}}
 * Persian: {{t+|fa|جنگیدن|tr=jangidan}}
 * Portuguese: {{t+|pt|lutar}}
